--- a/articles/active-directory/manage-apps/toc.yml
+++ b/articles/active-directory/manage-apps/toc.yml
@@ -212,11 +212,13 @@
         href: silverfort-azure-ad-integration.md
     - name: Single sign-on
       items:
-      - name: Linked
-        href: configure-linked-sign-on.md
-      - name: OpenID Connect
+      - name: Enable single sign-on with SAML
         href: add-application-portal-setup-oidc-sso.md
-      - name: Password
+      - name: Enable Linked based single sign-on
+        href: configure-linked-sign-on.md
+      - name: Enable OpenID Connect based single sign-on
+        href: add-application-portal-setup-oidc-sso.md
+      - name: Enable Password based single sign-on
         href: configure-password-single-sign-on-non-gallery-applications.md
     - name: Troubleshoot
       items:
