--- a/articles/stream-analytics/TOC.yml
+++ b/articles/stream-analytics/TOC.yml
@@ -31,6 +31,8 @@
   items:
   - name: Capture Event Hubs data in Parquet format
     href: event-hubs-parquet-capture-tutorial.md
+  - name: Write output data to delta table in ADLS Gen2
+    href: write-to-delta-table-adls-gen2.md
   - name: Build near-real time dashboards with no code editor
     href: no-code-power-bi-tutorial.md
   - name: Visualize fraudulent calls in Power BI
@@ -106,6 +108,8 @@
       items:
         - name: Azure Blob and Data Lake output overview
           href: blob-storage-azure-data-lake-gen2-output.md
+        - name: Write data to Delta Lake
+          href: write-to-delta-lake.md
         - name: Custom path patterns
           href: stream-analytics-custom-path-patterns-blob-storage-output.md
     - name: Azure Event Hubs
