--- a/articles/cosmos-db/notebooks-faq.yml
+++ b/articles/cosmos-db/notebooks-faq.yml
@@ -14,6 +14,9 @@ title: Frequently asked questions about Jupyter Notebooks in Azure Cosmos DB (pr
 summary: |
   [!INCLUDE[appliesto-all-apis](includes/appliesto-all-apis.md)]
 
+  > [!IMPORTANT]
+  > The Jupyter Notebooks feature of Azure Cosmos DB is currently in a preview state and is progressively rolling out to all customers over time.
+
   Azure Cosmos DB built-in Jupyter Notebooks are directly integrated into the Azure portal and your Azure Cosmos DB accounts, making them convenient and easy to use. Developers, data scientists, engineers, and analysts can use the familiar Jupyter Notebooks experience to perform common tasks. These common tasks include:
 
   - data exploration
