--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1039,5 +1039,7 @@
     "articles/applied-ai-services/.openpublishing.redirection.applied-ai-services.json",
     "articles/applied-ai-services/.openpublishing.archived.json",
     "articles/cognitive-services/.openpublishing.redirection.cognitive-services.json"
+    ".openpublishing.redirection.baremetal-infrastructure"
+
   ]
 }
