--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1038,7 +1038,7 @@
     ".openpublishing.redirection.virtual-desktop.json",
     "articles/applied-ai-services/.openpublishing.redirection.applied-ai-services.json",
     "articles/applied-ai-services/.openpublishing.archived.json",
-    "articles/cognitive-services/.openpublishing.redirection.cognitive-services.json"
+    "articles/cognitive-services/.openpublishing.redirection.cognitive-services.json",
     ".openpublishing.redirection.baremetal-infrastructure.json"
 
   ]
