--- a/articles/iot-develop/TOC.yml
+++ b/articles/iot-develop/TOC.yml
@@ -122,7 +122,7 @@
     - name: Azure PowerShell
       href: /powershell/module/az.iothub#iothub
     - name: C (Device)
-      href: /azure/iot-hub/iot-c-sdk-ref/
+      href: https://github.com/Azure/azure-iot-sdk-c/
     - name: Embedded C (Device)
       href: https://azure.github.io/azure-sdk-for-c/
     - name: Azure RTOS Middleware (Device)
