--- a/articles/container-apps/TOC.yml
+++ b/articles/container-apps/TOC.yml
@@ -6,7 +6,7 @@
       href: overview.md
     - name: Compare container options in Azure
       href: compare-options.md
-    - name: Plans types
+    - name: Plan types
       href: plans.md
 - name: Quickstarts
   expanded: true
