--- a/articles/api-management/TOC.yml
+++ b/articles/api-management/TOC.yml
@@ -232,7 +232,7 @@
                   href: backends.md
                 - name: Automate API deployments
                   href: /azure/architecture/example-scenario/devops/automated-api-deployments-apiops?toc=%2Fazure%2Fapi-management%2Ftoc.json&bc=/azure/api-management/breadcrumb/toc.json
-                - name: Use Postman to test and monitor
+                - name: Test and monitor APIs in Postman
                   href: export-api-postman.md
                   displayName: collection
           - name: Cache
