--- a/articles/virtual-machines/deprecated-images.yml
+++ b/articles/virtual-machines/deprecated-images.yml
@@ -19,7 +19,7 @@ sections:
     questions:
       - question: I got an email that my image is scheduled for deprecation, what does this mean?
         answer: |
-          You might have received an email telling you that your Virtual machine is running on images that are scheduled for deprecation or already deprecated as seen in the diagram below. There are several reasons an image can be deprecated by the publisher, which might be due to security issues or the image reaching end of life. 
+          You might have received an email telling you that your Virtual machine is running on images that are scheduled for deprecation or already deprecated. There are several reasons an image can be deprecated by the publisher, which might be due to security issues or the image reaching end of life. 
           
            
           
@@ -32,7 +32,7 @@ sections:
         answer: |
           Before the scheduled deprecation date, you can continue to deploy new VM or scale set instances up until the deprecation date.
           
-          After the scheduled deprecation date, you won't be able to deploy new instances using the affected images. If the plan is scheduled for deprecation, all image versions within the plan will no longer be available and if the entire offer is scheduled for deprecation, all plans within the offer will no longer be available following deprecation.
+          After the scheduled deprecation date, you won't be able to deploy new instances using the affected images. If the plan is scheduled for deprecation, all image versions within the plan will no longer be available. If the entire offer is scheduled for deprecation, all plans within the offer will no longer be available following deprecation.
           
           - Active VM instances won't be impacted.  
           - New VM instances  can't be created from any of the impacted images.
@@ -41,16 +41,16 @@ sections:
           
           **What do I need to do?**
 
-          If you want your scale set to scale out after the deprecation date,  you'll need to identify the scale set running on the deprecated image and then migrate your workload to a supported image. If you want to remain on the image after deprecation, you can create your own custom image and migrate to it (Steps outlined below). If you already have auto updates configured for your VM or scale set,  you'll only be impacted when an Offer or plan version is deprecated (No impact on image version deprecation).
+          If you want your scale set to scale out after the deprecation date,  you'll need to identify the scale set running on the deprecated image, and then migrate your workload to a supported image. If you want to remain on the image after deprecation, you can create your own custom image and migrate to it (Steps outlined below). If you already have auto updates configured for your VM or scale set,  you'll only be impacted when an Offer or plan version is deprecated (No impact on image version deprecation).
           
           
           
       - question: How can I identify the VMs and scale sets in my subscription that are running on images that are scheduled for deprecation?
         answer: |
-          You can search for the scheduled or deprecated image in your subscription (your subscription ID and name is provided at the bottom of the email notification you received) in the following ways:
+          You can search for the scheduled or deprecated image in your subscription in the following ways:
           
           
-          If you are notified that an image is deprecated on only the Offer or plan (SKU) level, you can search for all virtual machines from the top search bar on the Azure Portal and edit the columns as seen below to include Publisher, Offer, Plan  as below. This will not give the version information, only up to the Plan information.
+          If you are notified that an image is deprecated on only the Offer or plan (SKU) level, you can search for all virtual machines from the search bar in the Azure Portal. Edit the columns to include Publisher, Offer, and Plan. This will not give the version information, only up to the Plan information.
            
                         
           If you are notified that an image is deprecated on the offer, plan (SKU) or version level, you can use Azure Resource Graph Explorer on the Azure portal to find the specific version for images in your subscription that your VM or scale set is running on.
@@ -130,9 +130,9 @@ sections:
         answer: |
           You might want to keep using an image that is scheduled for deprecation for specific reasons or you might want to migrate your workloads to another Offer/Plan/Version. 
           
-          If you want to keep using an image that is scheduled for deprecation, generalize the powered off VM and create a custom image out of it and use that custom image for your VM or scale set. Then change the VM or scale set deployment  to point to the custom image. For more information, see [Capture an image of a VM in the portal](capture-image-portal.md).
+          If you want to keep using an image that is scheduled for deprecation, generalize the VM, deallocate the VM, then create a custom image for your VM or scale set. Then change the VM or scale set deployment  to point to the custom image. For more information, see [Capture an image of a VM in the portal](capture-image-portal.md).
           
-          We recommend that you create custom images from free Marketplace images (images that do not have Plan Info) that are scheduled for deprecation or already deprecated. For Paid Marketplace images, we suggest you create custom images from the latest version of the image. Workloads running on custom images created from a deprecated paid image will no longer work after the paid image is deprecated.
+          We recommend that you create custom images from free Marketplace images, that do not have Plan Info, that are scheduled for deprecation. For Paid Marketplace images, we suggest you create custom images from the latest version of the image. Workloads running on custom images created from a deprecated paid image will no longer work after the paid image is deprecated.
           
           **You want to migrate to another offer/plan/version:**
 
