--- a/articles/iot-develop/TOC.yml
+++ b/articles/iot-develop/TOC.yml
@@ -61,6 +61,8 @@
     href: concepts-iot-device-types.md
   - name: Device certification
     href: ../certification/program-requirements-pnp.md
+  - name: IoT device selection list
+    href: iot-device-selection.md
   - name: Device models
     items:
     - name: Modeling guide
