--- a/articles/virtual-machines/TOC.yml
+++ b/articles/virtual-machines/TOC.yml
@@ -1333,6 +1333,8 @@
         href: ./windows/migrate-to-premium-storage-using-azure-site-recovery.md
     - name: Migrate to Managed Disks
       href: ./windows/migrate-to-managed-disks.md
+    - name: Unmanaged Disks retirement starting November 1, 2022
+      href: ./unmanaged-disks-deprecation
     - name: Unmanaged VM to Managed Disks
       items:
       - name: CLI
