--- a/articles/virtual-machines/TOC.yml
+++ b/articles/virtual-machines/TOC.yml
@@ -1334,7 +1334,7 @@
     - name: Migrate to Managed Disks
       href: ./windows/migrate-to-managed-disks.md
     - name: Unmanaged Disks retirement starting November 1, 2022
-      href: ./unmanaged-disks-deprecation
+      href: ./unmanaged-disks-deprecation.md
     - name: Unmanaged VM to Managed Disks
       items:
       - name: CLI
