--- a/articles/cosmos-db/synapse-link-frequently-asked-questions.yml
+++ b/articles/cosmos-db/synapse-link-frequently-asked-questions.yml
@@ -21,7 +21,7 @@ sections:
       - question: |
           Is Azure Synapse Link supported for all Azure Cosmos DB APIs?
         answer: |
-          Azure Synapse Link is supported for the Azure Cosmos DB SQL (Core) API and for the Azure Cosmos DB API for MongoDB. 
+          Azure Synapse Link is supported for the Azure Cosmos DB SQL (Core) API and for the Azure Cosmos DB API for MongoDB. The support for Gremlin API is in preview now.
 
       - question: |
           Is Azure Synapse Link supported for multi-region Azure Cosmos DB accounts?
