Emphasize Event Hubs in the howto-guide

--- a/articles/azure-web-pubsub/toc.yml
+++ b/articles/azure-web-pubsub/toc.yml
@@ -72,6 +72,8 @@
         href: howto-create-serviceclient-with-javascript-and-azure-identity.md
       - name: Create `WebPubSubServiceClient` with Azure Identity and Python
         href: howto-create-serviceclient-with-python-and-azure-identity.md
+    - name: Send client events to Event Hubs
+      href: howto-develop-eventlistener.md
   - name: Monitor
     items:
     - name: Audit compliance using Azure Policy
@@ -135,7 +137,7 @@
   - name: Metrics
     href: concept-metrics.md
 
-- name: Reference 
+- name: Reference
   items:
   - name: WebSocket subprotocols
     expanded: true
